--- a/session5/complete/session5.ipynb
+++ b/session5/complete/session5.ipynb
@@ -150,9 +150,13 @@
    "source": [
     "### Exercise 3\n",
     "\n",
-    "#### 3.1. Send 0.02 TBTC to this address `muvpVznkBtk8rRSxLRVQRdUhsMjS7aKRne`\n",
+    "#### 3.1. Send 0.04 TBTC to this address `muvpVznkBtk8rRSxLRVQRdUhsMjS7aKRne`\n",
     "\n",
-    "#### Go here to send your transaction: https://testnet.blockexplorer.com/tx/send"
+    "#### Go here to send your transaction: https://testnet.blockexplorer.com/tx/send\n",
+    "\n",
+    "#### Bonus. Get some testnet coins and spend both outputs (one from your change address and one from the testnet faucet) to `muvpVznkBtk8rRSxLRVQRdUhsMjS7aKRne`\n",
+    "\n",
+    "#### You can get some free testnet coins at: https://testnet.coinfaucet.eu/en/"
    ]
   },
   {
