--- a/session5/session5.ipynb
+++ b/session5/session5.ipynb
@@ -126,7 +126,7 @@
    "source": [
     "### Exercise 3\n",
     "\n",
-    "#### 3.1. Send 0.02 TBTC to this address `muvpVznkBtk8rRSxLRVQRdUhsMjS7aKRne`\n",
+    "#### 3.1. Send 0.04 TBTC to this address `muvpVznkBtk8rRSxLRVQRdUhsMjS7aKRne`\n",
     "\n",
     "#### Go here to send your transaction: https://testnet.blockexplorer.com/tx/send\n",
     "\n",
@@ -148,12 +148,12 @@
     "from script import Script\n",
     "from tx import TxIn, TxOut, Tx\n",
     "\n",
-    "prev_tx = bytes.fromhex('0025bc3c0fa8b7eb55b9437fdbd016870d18e0df0ace7bc9864efc38414147c8')\n",
-    "prev_index = -1\n",
+    "prev_tx = bytes.fromhex('<fill this in>')\n",
+    "prev_index = -1 # FILL THIS IN\n",
     "target_address = 'muvpVznkBtk8rRSxLRVQRdUhsMjS7aKRne'\n",
-    "target_amount = 0.02\n",
-    "change_address = 'muvpVznkBtk8rRSxLRVQRdUhsMjS7aKRne'\n",
-    "change_amount = -1\n",
+    "target_amount = 0.04\n",
+    "change_address = '<this should be your address>'\n",
+    "change_amount = -1 # CALCULATE THIS\n",
     "secret = 1800555555518005555555\n",
     "priv = PrivateKey(secret=secret)\n",
     "\n",
