sao paulo update

--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -15,6 +15,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Addition/Subtraction example\n",
+    "\n",
+    "print((11 + 6) % 19)\n",
+    "print((17 - 11) % 19)\n",
+    "print((8 + 14) % 19)\n",
+    "print((4 - 12) % 19)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,6 +79,20 @@
     "reload(ecc)\n",
     "run_test(ecc.FieldElementTest('test_add'))\n",
     "run_test(ecc.FieldElementTest('test_sub'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multiplication/Exponentiation Example\n",
+    "\n",
+    "print(2 * 4 % 19)\n",
+    "print(7 * 3 % 19)\n",
+    "print(11 ** 3 % 19)\n",
+    "print(pow(11, 3, 19))"
    ]
   },
   {
@@ -150,6 +178,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Division Example\n",
+    "\n",
+    "print(2 * 3**17 % 19)\n",
+    "print(2 * pow(3, 17, 19) % 19)\n",
+    "print(3 * 15**17 % 19)\n",
+    "print(3 * pow(15, 17, 19) % 19)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -198,6 +240,19 @@
     "\n",
     "# Hint: the __pow__ method needs a positive number for the exponent.\n",
     "# You can mod by p-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Elliptic Curve Example\n",
+    "\n",
+    "x, y = -1, -1\n",
+    "\n",
+    "print(y**2 == x**3 + 5*x + 7)"
    ]
   },
   {
@@ -270,6 +325,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Point Addition where x1 != x2 Example\n",
+    "\n",
+    "x1, y1 = (2, 5)\n",
+    "x2, y2 = (3, 7)\n",
+    "s = (y2-y1)/(x2-x1)\n",
+    "x3 = s**2 - x2 - x1\n",
+    "y3 = s*(x1-x3)-y1\n",
+    "print(x3, y3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -309,6 +380,22 @@
     "\n",
     "reload(ecc)\n",
     "run_test(ecc.PointTest('test_add1'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Point Addition where x1 = x2 Example\n",
+    "\n",
+    "a = 5\n",
+    "x1, y1 = (2, 5)\n",
+    "s = (3*x1**2+a)/(2*y1)\n",
+    "x3 = s**2 - 2*x1\n",
+    "y3 = s*(x1-x3) - y1\n",
+    "print(x3, y3)"
    ]
   },
   {
