--- a/session2/complete/session2.ipynb
+++ b/session2/complete/session2.ipynb
@@ -15,6 +15,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verify curve Example\n",
+    "\n",
+    "prime = 137\n",
+    "x, y = 73, 128\n",
+    "\n",
+    "print(y**2 % prime == (x**3 + 7) % prime)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,6 +121,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(99,49)_137\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example where x1 != x2\n",
+    "\n",
+    "from ecc import FieldElement, Point\n",
+    "\n",
+    "prime = 137\n",
+    "a = FieldElement(0, prime)\n",
+    "b = FieldElement(7, prime)\n",
+    "p1 = Point(FieldElement(73, prime), FieldElement(128, prime), a, b)\n",
+    "p2 = Point(FieldElement(46, prime), FieldElement(22, prime), a, b)\n",
+    "\n",
+    "print(p1+p2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -117,16 +166,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Point(FieldElement_223(192),FieldElement_223(105)) + Point(FieldElement_223(17),FieldElement_223(56)) = Point(FieldElement_223(170),FieldElement_223(142))\n",
-      "Point(FieldElement_223(47),FieldElement_223(71)) + Point(FieldElement_223(117),FieldElement_223(141)) = Point(FieldElement_223(60),FieldElement_223(139))\n",
-      "Point(FieldElement_223(143),FieldElement_223(98)) + Point(FieldElement_223(76),FieldElement_223(66)) = Point(FieldElement_223(47),FieldElement_223(71))\n"
+      "Point(192,105)_223 + Point(17,56)_223 = Point(170,142)_223\n",
+      "Point(47,71)_223 + Point(117,141)_223 = Point(60,139)_223\n",
+      "Point(143,98)_223 + Point(76,66)_223 = Point(47,71)_223\n"
      ]
     }
    ],
@@ -161,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -184,6 +233,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(103,76)_137\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example where x1 != x2\n",
+    "\n",
+    "from ecc import FieldElement, Point\n",
+    "\n",
+    "prime = 137\n",
+    "a = FieldElement(0, prime)\n",
+    "b = FieldElement(7, prime)\n",
+    "p = Point(FieldElement(73, prime), FieldElement(128, prime), a, b)\n",
+    "\n",
+    "print(p+p)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -199,18 +274,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Point(FieldElement_223(49),FieldElement_223(71))\n",
-      "Point(FieldElement_223(64),FieldElement_223(168))\n",
-      "Point(FieldElement_223(36),FieldElement_223(111))\n",
-      "Point(FieldElement_223(194),FieldElement_223(51))\n",
-      "Point(FieldElement_223(116),FieldElement_223(55))\n",
+      "Point(49,71)_223\n",
+      "Point(64,168)_223\n",
+      "Point(36,111)_223\n",
+      "Point(194,51)_223\n",
+      "Point(116,55)_223\n",
       "Point(infinity)\n"
      ]
     }
@@ -246,6 +321,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1:Point(47,71)_223\n",
+      "2:Point(36,111)_223\n",
+      "3:Point(15,137)_223\n",
+      "4:Point(194,51)_223\n",
+      "5:Point(126,96)_223\n",
+      "6:Point(139,137)_223\n",
+      "7:Point(92,47)_223\n",
+      "8:Point(116,55)_223\n",
+      "9:Point(69,86)_223\n",
+      "10:Point(154,150)_223\n",
+      "11:Point(154,73)_223\n",
+      "12:Point(69,137)_223\n",
+      "13:Point(116,168)_223\n",
+      "14:Point(92,176)_223\n",
+      "15:Point(139,86)_223\n",
+      "16:Point(126,127)_223\n",
+      "17:Point(194,172)_223\n",
+      "18:Point(15,86)_223\n",
+      "19:Point(36,112)_223\n",
+      "20:Point(47,152)_223\n",
+      "21:Point(infinity)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group Example\n",
+    "\n",
+    "from ecc import FieldElement, Point\n",
+    "\n",
+    "prime = 223\n",
+    "a = FieldElement(0, prime)\n",
+    "b = FieldElement(7, prime)\n",
+    "G = Point(FieldElement(47, prime), FieldElement(71, prime), a, b)\n",
+    "inf = Point(None, None, a, b)\n",
+    "total = G\n",
+    "count = 1\n",
+    "\n",
+    "while total != inf:\n",
+    "    print('{}:{}'.format(count, total))\n",
+    "    total += G\n",
+    "    count += 1\n",
+    "print('{}:{}'.format(count, total))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -263,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +441,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -328,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -349,14 +477,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Point(infinity)\n"
+      "S256Point(infinity)\n"
      ]
     }
    ],
@@ -370,14 +498,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Point(9680241112d370b56da22eb535745d9e314380e568229e09f7241066003bc471,ddac2d377f03c201ffa0419d6596d10327d6c70313bb492ff495f946285d8f38)\n"
+      "S256Point(9680241112d370b56da22eb535745d9e314380e568229e09f7241066003bc471,ddac2d377f03c201ffa0419d6596d10327d6c70313bb492ff495f946285d8f38)\n"
      ]
     }
    ],
@@ -409,17 +537,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Point(5cbdf0646e5db4eaa398f365f2ea7a0e3d419b7e0330e39ce92bddedcac4f9bc,6aebca40ba255960a3178d6d861a54dba813d0b813fde7b5a5082628087264da)\n",
-      "Point(c982196a7466fbbbb0e27a940b6af926c1a74d5ad07128c82824a11b5398afda,7a91f9eae64438afb9ce6448a1c133db2d8fb9254e4546b6f001637d50901f55)\n",
-      "Point(8f68b9d2f63b5f339239c1ad981f162ee88c5678723ea3351b7b444c9ec4c0da,662a9f2dba063986de1d90c2b6be215dbbea2cfe95510bfdf23cbf79501fff82)\n",
-      "Point(9577ff57c8234558f293df502ca4f09cbc65a6572c842b39b366f21717945116,10b49c67fa9365ad7b90dab070be339a1daf9052373ec30ffae4f72d5e66d053)\n"
+      "S256Point(5cbdf0646e5db4eaa398f365f2ea7a0e3d419b7e0330e39ce92bddedcac4f9bc,6aebca40ba255960a3178d6d861a54dba813d0b813fde7b5a5082628087264da)\n",
+      "S256Point(c982196a7466fbbbb0e27a940b6af926c1a74d5ad07128c82824a11b5398afda,7a91f9eae64438afb9ce6448a1c133db2d8fb9254e4546b6f001637d50901f55)\n",
+      "S256Point(8f68b9d2f63b5f339239c1ad981f162ee88c5678723ea3351b7b444c9ec4c0da,662a9f2dba063986de1d90c2b6be215dbbea2cfe95510bfdf23cbf79501fff82)\n",
+      "S256Point(9577ff57c8234558f293df502ca4f09cbc65a6572c842b39b366f21717945116,10b49c67fa9365ad7b90dab070be339a1daf9052373ec30ffae4f72d5e66d053)\n"
      ]
     }
    ],
@@ -438,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +575,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.175s\n",
+      "Ran 1 test in 0.169s\n",
       "\n",
       "OK\n"
      ]
@@ -458,6 +586,36 @@
     "\n",
     "reload(ecc)\n",
     "run_test(ecc.S256Test('test_pubpoint'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "045cbdf0646e5db4eaa398f365f2ea7a0e3d419b7e0330e39ce92bddedcac4f9bc6aebca40ba255960a3178d6d861a54dba813d0b813fde7b5a5082628087264da\n",
+      "025cbdf0646e5db4eaa398f365f2ea7a0e3d419b7e0330e39ce92bddedcac4f9bc\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SEC Example\n",
+    "\n",
+    "from ecc import S256Point\n",
+    "\n",
+    "point = S256Point(0x5CBDF0646E5DB4EAA398F365F2EA7A0E3D419B7E0330E39CE92BDDEDCAC4F9BC, 0x6AEBCA40BA255960A3178D6D861A54DBA813D0B813FDE7B5A5082628087264DA)\n",
+    "\n",
+    "uncompressed = b'\\x04' + point.x.num.to_bytes(32, 'big') + point.y.num.to_bytes(32, 'big')\n",
+    "print(uncompressed.hex())\n",
+    "if point.y.num % 2 == 1:\n",
+    "    compressed = b'\\x03' + point.x.num.to_bytes(32, 'big')\n",
+    "else:\n",
+    "    compressed = b'\\x02' + point.x.num.to_bytes(32, 'big')\n",
+    "print(compressed.hex())"
    ]
   },
   {
@@ -479,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +688,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.133s\n",
+      "Ran 1 test in 0.135s\n",
       "\n",
       "OK\n"
      ]
@@ -541,6 +699,31 @@
     "\n",
     "reload(ecc)\n",
     "run_test(ecc.S256Test('test_sec'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'19ZewH8Kk1PDbSNdJ97FP4EiCjTRaZMZQA'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Address Example\n",
+    "\n",
+    "from helper import encode_base58, hash160, double_sha256\n",
+    "sec = bytes.fromhex('025CBDF0646E5DB4EAA398F365F2EA7A0E3D419B7E0330E39CE92BDDEDCAC4F9BC')\n",
+    "h160 = hash160(sec)\n",
+    "raw = b\"\\x00\" + h160\n",
+    "raw = raw + double_sha256(raw)[:4]\n",
+    "addr = encode_base58(raw)\n",
+    "print(addr)"
    ]
   },
   {
@@ -564,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +807,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.131s\n",
+      "Ran 1 test in 0.135s\n",
       "\n",
       "OK\n"
      ]
@@ -650,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
