--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -15,6 +15,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Verify curve Example\n",
+    "\n",
+    "prime = 137\n",
+    "x, y = 73, 128\n",
+    "\n",
+    "print(y**2 % prime == (x**3 + 7) % prime)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,6 +79,25 @@
     "\n",
     "reload(ecc)\n",
     "run_test(ecc.ECCTest('test_on_curve'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example where x1 != x2\n",
+    "\n",
+    "from ecc import FieldElement, Point\n",
+    "\n",
+    "prime = 137\n",
+    "a = FieldElement(0, prime)\n",
+    "b = FieldElement(7, prime)\n",
+    "p1 = Point(FieldElement(73, prime), FieldElement(128, prime), a, b)\n",
+    "p2 = Point(FieldElement(46, prime), FieldElement(22, prime), a, b)\n",
+    "\n",
+    "print(p1+p2)"
    ]
   },
   {
@@ -124,6 +157,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example where x1 != x2\n",
+    "\n",
+    "from ecc import FieldElement, Point\n",
+    "\n",
+    "prime = 137\n",
+    "a = FieldElement(0, prime)\n",
+    "b = FieldElement(7, prime)\n",
+    "p = Point(FieldElement(73, prime), FieldElement(128, prime), a, b)\n",
+    "\n",
+    "print(p+p)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -162,7 +213,32 @@
     "    # start product at 0 (point at infinity)\n",
     "    # loop over n times (n is 2, 4, 8 or 21 in the above examples)\n",
     "        # add the point to the product\n",
-    "    # print product    "
+    "    # print product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group Example\n",
+    "\n",
+    "from ecc import FieldElement, Point\n",
+    "\n",
+    "prime = 223\n",
+    "a = FieldElement(0, prime)\n",
+    "b = FieldElement(7, prime)\n",
+    "G = Point(FieldElement(47, prime), FieldElement(71, prime), a, b)\n",
+    "inf = Point(None, None, a, b)\n",
+    "total = G\n",
+    "count = 1\n",
+    "\n",
+    "while total != inf:\n",
+    "    print('{}:{}'.format(count, total))\n",
+    "    total += G\n",
+    "    count += 1\n",
+    "print('{}:{}'.format(count, total))"
    ]
   },
   {
@@ -306,6 +382,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SEC Example\n",
+    "\n",
+    "from ecc import S256Point\n",
+    "\n",
+    "point = S256Point(0x5CBDF0646E5DB4EAA398F365F2EA7A0E3D419B7E0330E39CE92BDDEDCAC4F9BC, 0x6AEBCA40BA255960A3178D6D861A54DBA813D0B813FDE7B5A5082628087264DA)\n",
+    "\n",
+    "uncompressed = b'\\x04' + point.x.num.to_bytes(32, 'big') + point.y.num.to_bytes(32, 'big')\n",
+    "print(uncompressed.hex())\n",
+    "if point.y.num % 2 == 1:\n",
+    "    compressed = b'\\x03' + point.x.num.to_bytes(32, 'big')\n",
+    "else:\n",
+    "    compressed = b'\\x02' + point.x.num.to_bytes(32, 'big')\n",
+    "print(compressed.hex())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -352,6 +449,23 @@
     "\n",
     "reload(ecc)\n",
     "run_test(ecc.S256Test('test_sec'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Address Example\n",
+    "\n",
+    "from helper import encode_base58, hash160, double_sha256\n",
+    "sec = bytes.fromhex('025CBDF0646E5DB4EAA398F365F2EA7A0E3D419B7E0330E39CE92BDDEDCAC4F9BC')\n",
+    "h160 = hash160(sec)\n",
+    "raw = b\"\\x00\" + h160\n",
+    "raw = raw + double_sha256(raw)[:4]\n",
+    "addr = encode_base58(raw)\n",
+    "print(addr)"
    ]
   },
   {
