--- a/session4/complete/session4.ipynb
+++ b/session4/complete/session4.ipynb
@@ -181,10 +181,7 @@
     "```\n",
     "tx.py:TxTest:test_input_value\n",
     "tx.py:TxTest:test_input_pubkey\n",
-    "```\n",
-    "\n",
-    "#### Bonus:\n",
-    "#### Cache the requests so that you don't hit blockcypher.com multiple times for the same transaction output."
+    "```"
    ]
   },
   {
@@ -232,12 +229,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.338s\n",
+      "Ran 1 test in 0.636s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -327,7 +324,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 1.589s\n",
+      "Ran 1 test in 2.880s\n",
       "\n",
       "OK\n"
      ]
@@ -349,7 +346,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27e0c5994dec7824e56dec6b2fcb342eb7cdb0d0957c2fce9882f715e85d81a6\n"
+      "0x27e0c5994dec7824e56dec6b2fcb342eb7cdb0d0957c2fce9882f715e85d81a6\n"
      ]
     }
    ],
@@ -361,7 +358,7 @@
     "modified_tx = bytes.fromhex('0100000001813f79011acb80925dfe69b3def355fe914bd1d96a3f5f71bf8303c6a989c7d1000000001976a914a802fc56c704ce87c42d7c92eb75e7896bdc41ae88acfeffffff02a135ef01000000001976a914bc3b654dca7e56b04dca18f2566cdaf02e8d9ada88ac99c39800000000001976a9141c4bc762dd5423e332166702cb75f40df79fea1288ac1943060001000000')\n",
     "h = double_sha256(modified_tx)\n",
     "z = int.from_bytes(h, 'big')\n",
-    "print(h.hex())"
+    "print(hex(z))"
    ]
   },
   {
@@ -387,7 +384,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.314s\n",
+      "Ran 1 test in 1.067s\n",
       "\n",
       "OK\n"
      ]
