--- a/session6/complete/session6.ipynb
+++ b/session6/complete/session6.ipynb
@@ -230,7 +230,7 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n",
       ".\n",
@@ -319,12 +319,12 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -360,7 +360,7 @@
     "bits = bytes.fromhex('e93c0118')\n",
     "exponent = bits[-1]\n",
     "coefficient = little_endian_to_int(bits[:-1])\n",
-    "target = coefficient*2**(8*(exponent-3))\n",
+    "target = coefficient*256**(exponent-3)\n",
     "print('{:x}'.format(target).zfill(64))"
    ]
   },
@@ -385,12 +385,12 @@
     "bits = bytes.fromhex('e93c0118')\n",
     "exponent = bits[-1]\n",
     "coefficient = little_endian_to_int(bits[:-1])\n",
-    "target = coefficient*2**(8*(exponent-3))\n",
+    "target = coefficient*256**(exponent-3)\n",
     "\n",
     "bits_min = bytes.fromhex('ffff001d')\n",
     "exponent_min = bits_min[-1]\n",
     "coefficient_min = little_endian_to_int(bits_min[:-1])\n",
-    "min = coefficient_min*2**(8*(exponent_min-3))\n",
+    "min = coefficient_min*256**(exponent_min-3)\n",
     "\n",
     "difficulty = min // target\n",
     "print(difficulty)"
@@ -409,7 +409,7 @@
     "\n",
     "Bits to target formula is \n",
     "\n",
-    "\\\\(coefficient\\cdot2^{8\\cdot(exponent-3)}\\\\) \n",
+    "\\\\(coefficient\\cdot256^{(exponent-3)}\\\\) \n",
     "\n",
     "where coefficient is the first three bytes in little endian and exponent is the last byte.\n",
     "\n",
@@ -417,7 +417,7 @@
     "\n",
     "\\\\(difficulty = min / target\\\\)\n",
     "\n",
-    "where \\\\(min = 0xffff\\cdot2^{8\\cdot(0x1d-3)}\\\\)\n",
+    "where \\\\(min = 0xffff\\cdot256^{(0x1d-3)}\\\\)\n",
     "\n",
     "#### 6.2. Make [this test](/edit/session6/block.py) pass.\n",
     "```\n",
@@ -453,7 +453,7 @@
     "# first three bytes are the coefficient in little endian\n",
     "coefficient = little_endian_to_int(bits[:-1])\n",
     "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
-    "target = coefficient * 2**(8*(exponent-3))\n",
+    "target = coefficient * 256**(exponent-3)\n",
     "# print target using print('{:x}'.format(target).zfill(64))\n",
     "print('{:x}'.format(target).zfill(64))\n",
     "\n",
@@ -462,7 +462,7 @@
     "min_bits = bytes.fromhex(hex_min_bits)\n",
     "min_exponent = min_bits[-1]\n",
     "min_coefficient = little_endian_to_int(min_bits[:-1])\n",
-    "min_target = min_coefficient * 2**(8*(min_exponent-3))\n",
+    "min_target = min_coefficient * 256**(min_exponent-3)\n",
     "\n",
     "# difficulty is min target / target\n",
     "difficulty = min_target / target\n",
