--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -468,7 +468,7 @@
     "total_levels = math.ceil(math.log(16, 2))\n",
     "merkle_path = []\n",
     "index = 10\n",
-    "for i in range(total_levels):\n",
+    "for _ in range(total_levels):\n",
     "    merkle_path.append(index)\n",
     "    index = index // 2\n",
     "print(merkle_path)"
