--- a/session1/complete/session1.ipynb
+++ b/session1/complete/session1.ipynb
@@ -15,6 +15,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n",
+      "6\n",
+      "3\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Addition/Subtraction example\n",
+    "\n",
+    "print((11 + 6) % 19)\n",
+    "print((17 - 11) % 19)\n",
+    "print((8 + 14) % 19)\n",
+    "print((4 - 12) % 19)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +122,31 @@
     "reload(ecc)\n",
     "run_test(ecc.FieldElementTest('test_add'))\n",
     "run_test(ecc.FieldElementTest('test_sub'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "2\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multiplication/Exponentiation Example\n",
+    "\n",
+    "print(2 * 4 % 19)\n",
+    "print(7 * 3 % 19)\n",
+    "print(11 ** 3 % 19)\n",
+    "print(pow(11, 3, 19))"
    ]
   },
   {
@@ -126,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -227,6 +277,31 @@
     "\n",
     "# use range(1, prime) to iterate over all numbers from 1 to 30 inclusive\n",
     "print([i**30 % prime for i in range(1, prime)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "7\n",
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Division Example\n",
+    "\n",
+    "print(2 * 3**17 % 19)\n",
+    "print(2 * pow(3, 17, 19) % 19)\n",
+    "print(3 * 15**17 % 19)\n",
+    "print(3 * pow(15, 17, 19) % 19)"
    ]
   },
   {
@@ -252,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +364,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -303,6 +378,27 @@
     "\n",
     "# Hint: the __pow__ method needs a positive number for the exponent.\n",
     "# You can mod by p-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Elliptic Curve Example\n",
+    "\n",
+    "x, y = -1, -1\n",
+    "\n",
+    "print(y**2 == x**3 + 5*x + 7)"
    ]
   },
   {
@@ -323,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +495,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -410,6 +506,30 @@
     "\n",
     "reload(ecc)\n",
     "run_test(ecc.PointTest('test_add0'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.0 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Point Addition where x1 != x2 Example\n",
+    "\n",
+    "x1, y1 = (2, 5)\n",
+    "x2, y2 = (3, 7)\n",
+    "s = (y2-y1)/(x2-x1)\n",
+    "x3 = s**2 - x2 - x1\n",
+    "y3 = s*(x1-x3)-y1\n",
+    "print(x3, y3)"
    ]
   },
   {
@@ -428,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -480,6 +600,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.1100000000000003 0.2870000000000008\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Point Addition where x1 = x2 Example\n",
+    "\n",
+    "a = 5\n",
+    "x1, y1 = (2, 5)\n",
+    "s = (3*x1**2+a)/(2*y1)\n",
+    "x3 = s**2 - 2*x1\n",
+    "y3 = s*(x1-x3) - y1\n",
+    "print(x3, y3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -495,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +678,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
