--- a/session4/session4.ipynb
+++ b/session4/session4.ipynb
@@ -131,10 +131,7 @@
     "```\n",
     "tx.py:TxTest:test_input_value\n",
     "tx.py:TxTest:test_input_pubkey\n",
-    "```\n",
-    "\n",
-    "#### Bonus:\n",
-    "#### Cache the requests so that you don't hit blockcypher.com multiple times for the same transaction output."
+    "```"
    ]
   },
   {
@@ -240,7 +237,7 @@
     "modified_tx = bytes.fromhex('0100000001813f79011acb80925dfe69b3def355fe914bd1d96a3f5f71bf8303c6a989c7d1000000001976a914a802fc56c704ce87c42d7c92eb75e7896bdc41ae88acfeffffff02a135ef01000000001976a914bc3b654dca7e56b04dca18f2566cdaf02e8d9ada88ac99c39800000000001976a9141c4bc762dd5423e332166702cb75f40df79fea1288ac1943060001000000')\n",
     "h = double_sha256(modified_tx)\n",
     "z = int.from_bytes(h, 'big')\n",
-    "print(h.hex())"
+    "print(hex(z))"
    ]
   },
   {
