--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -239,7 +239,7 @@
     "bits = bytes.fromhex('e93c0118')\n",
     "exponent = bits[-1]\n",
     "coefficient = little_endian_to_int(bits[:-1])\n",
-    "target = coefficient*2**(8*(exponent-3))\n",
+    "target = coefficient*256**(exponent-3)\n",
     "print('{:x}'.format(target).zfill(64))"
    ]
   },
@@ -256,12 +256,12 @@
     "bits = bytes.fromhex('e93c0118')\n",
     "exponent = bits[-1]\n",
     "coefficient = little_endian_to_int(bits[:-1])\n",
-    "target = coefficient*2**(8*(exponent-3))\n",
+    "target = coefficient*256**(exponent-3)\n",
     "\n",
     "bits_min = bytes.fromhex('ffff001d')\n",
     "exponent_min = bits_min[-1]\n",
     "coefficient_min = little_endian_to_int(bits_min[:-1])\n",
-    "min = coefficient_min*2**(8*(exponent_min-3))\n",
+    "min = coefficient_min*256**(exponent_min-3)\n",
     "\n",
     "difficulty = min // target\n",
     "print(difficulty)"
@@ -280,7 +280,7 @@
     "\n",
     "Bits to target formula is \n",
     "\n",
-    "\\\\(coefficient\\cdot2^{8\\cdot(exponent-3)}\\\\) \n",
+    "\\\\(coefficient\\cdot256^{(exponent-3)}\\\\) \n",
     "\n",
     "where coefficient is the first three bytes in little endian and exponent is the last byte.\n",
     "\n",
@@ -288,7 +288,7 @@
     "\n",
     "\\\\(difficulty = min / target\\\\)\n",
     "\n",
-    "where \\\\(min = 0xffff\\cdot2^{8\\cdot(0x1d-3)}\\\\)\n",
+    "where \\\\(min = 0xffff\\cdot256^{(0x1d-3)}\\\\)\n",
     "\n",
     "#### 6.2. Make [this test](/edit/session6/block.py) pass.\n",
     "```\n",
@@ -311,7 +311,7 @@
     "# bytes.fromhex to get the bits\n",
     "# last byte is exponent\n",
     "# first three bytes are the coefficient in little endian\n",
-    "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
+    "# plug into formula coefficient * 256^(exponent-3) to get the target\n",
     "# print target using print('{:x}'.format(target).zfill(64))\n",
     "\n",
     "hex_min_bits = 'ffff001d'\n",
