--- a/session8.ipynb
+++ b/session8.ipynb
@@ -14,10 +14,10 @@
     "import block\n",
     "import ecc\n",
     "import helper\n",
+    "import merkleblock\n",
     "import network\n",
     "import script\n",
-    "import tx\n",
-    "import network"
+    "import tx"
    ]
   },
   {
@@ -26,8 +26,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "reload(tx)\n",
     "reload(network)\n",
     "reload(bloomfilter)\n",
+    "reload(merkleblock)\n",
     "\n",
     "import time\n",
     "\n",
@@ -36,35 +38,34 @@
     "\n",
     "from block import Block\n",
     "from bloomfilter import BloomFilter\n",
-    "from helper import int_to_little_endian, encode_varint, read_varint, decode_base58, p2pkh_script, SIGHASH_ALL\n",
+    "from helper import double_sha256, int_to_little_endian, encode_varint, read_varint, decode_base58, p2pkh_script, SIGHASH_ALL\n",
     "from merkleblock import MerkleBlock\n",
     "from network import NetworkEnvelope, SimpleNode, GetHeadersMessage\n",
     "from tx import Tx, TxIn, TxOut\n",
     "from ecc import PrivateKey\n",
     "\n",
-    "private_key = PrivateKey(secret=61740721216174072121)\n",
-    "print(private_key.point.address(testnet=True))\n",
+    "private_key = PrivateKey(secret=int.from_bytes(double_sha256(b'Jimmy Song'), 'big'))\n",
     "\n",
-    "addr = 'muvpVznkBtk8rRSxLRVQRdUhsMjS7aKRne'\n",
+    "addr = 'mtShBfBH9LFyHmqJFuKjmAPfv6jJmwpbeV'\n",
     "h160 = decode_base58(addr)\n",
-    "bf = BloomFilter(100, 20, 20)\n",
+    "bf = BloomFilter(30, 6, 42)\n",
     "bf.add(h160)\n",
     "\n",
     "target_address = 'muvpVznkBtk8rRSxLRVQRdUhsMjS7aKRne'\n",
     "target_h160 = decode_base58(target_address)\n",
     "target_script = p2pkh_script(target_h160)\n",
-    "fee = 1000  # fee in satoshis\n",
+    "fee = 50000  # fee in satoshis\n",
     "\n",
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True)\n",
     "\n",
     "# complete the handshake\n",
     "node.handshake()\n",
-    "\n",
+    "node.send(b'filterclear',b'')\n",
     "# load the bloom filter with the filterload command\n",
     "node.send(b'filterload', bf.filterload())\n",
     "\n",
     "# ask for blocks since block X\n",
-    "starting_block = bytes.fromhex('000000001439bf71cf731722c650375d0f188e528f5982c24a68a4745a809fd9')\n",
+    "starting_block = bytes.fromhex('0000000000000020ec00e9a5e463d9d61ca848c59ad1f37cc671bf8775c4884f')\n",
     "getheaders_message = GetHeadersMessage(starting_block=starting_block)\n",
     "node.send(b'getheaders', getheaders_message.serialize())\n",
     "\n",
@@ -93,33 +94,49 @@
     "node.send(b'getdata', payload)\n",
     "\n",
     "# look for merkleblock or tx commands and validate them\n",
-    "tx_ins = []\n",
-    "total = 0\n",
+    "txos = {}\n",
+    "count = 0\n",
     "while True:\n",
     "    envelope = node.wait_for_commands({b'merkleblock', b'tx'})\n",
     "    stream = BytesIO(envelope.payload)\n",
     "    if envelope.command.startswith(b'merkleblock'):\n",
+    "        continue\n",
     "        mb = MerkleBlock.parse(stream)\n",
     "        if not mb.is_valid():\n",
     "            raise RuntimeError('invalid merkle proof')\n",
     "    else:\n",
-    "        t = Tx.parse(stream)\n",
+    "        count += 1\n",
+    "        t = Tx.parse(stream, testnet=True)\n",
+    "        for tx_in in t.tx_ins:\n",
+    "            key = '{}:{}'.format(tx_in.prev_tx.hex(), tx_in.prev_index)\n",
+    "            if txos.get(key):\n",
+    "                txos.pop(key)\n",
+    "\n",
     "        for i, tx_out in enumerate(t.tx_outs):\n",
-    "            if tx_out.hash160() == h160:\n",
-    "                tx_ins.append(TxIn(t.hash()[::-1], i, b'', 0xffffffff))\n",
-    "                total += tx_out.amount\n",
-    "    if len(tx_ins) > 1:\n",
-    "        break\n",
+    "            try:\n",
+    "                if tx_out.hash160() == h160:\n",
+    "                    txos['{}:{}'.format(t.hash().hex(),i)] = t\n",
+    "            except:\n",
+    "                pass\n",
+    "        if count == 3:\n",
+    "            break\n",
+    "# create tx_ins\n",
+    "tx_ins = []\n",
+    "total = 0\n",
+    "for key, pt in txos.items():\n",
+    "    _, prev_index = key.split(':')\n",
+    "    prev_index = int(prev_index)\n",
+    "    tx_ins.append(TxIn(pt.hash(), prev_index, b'', 0xffffff))\n",
+    "    total += pt.tx_outs[prev_index].amount\n",
+    "    \n",
     "tx_outs = [TxOut(total-fee, target_script)]\n",
     "t = Tx(1, tx_ins, tx_outs, 0, testnet=True)\n",
     "for i in range(len(tx_ins)):\n",
     "    t.sign_input(i, private_key, SIGHASH_ALL)\n",
-    "\n",
+    "print(t.serialize().hex())\n",
     "# first, add this transaction to our bloom filter\n",
-    "# t.hash()\n",
     "# send this signed transaction on the network\n",
     "node.send(b'tx', t.serialize())\n",
-    "print(t.serialize().hex())\n",
     "# now wait for a response\n",
     "envelope = node.wait_for_commands({b'inv', b'reject'})\n",
     "print(envelope.command)\n",
@@ -150,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
