--- a/session8.ipynb
+++ b/session8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,123 @@
     "import network\n",
     "import script\n",
     "import tx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 1\n",
+    "\n",
+    "1. Given a Bloom Filter with these parameters: size=20, function count=5, tweak=99, which bits are set after adding these items? \n",
+    "\n",
+    " * `b'Hello World'`\n",
+    " * `b'Goodbye!'`\n",
+    "\n",
+    "2. Make this test pass."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0000000a080000000140\n",
+      "4000600a080000010940\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 1.1\n",
+    "\n",
+    "from bloomfilter import BloomFilter, BIP37_CONSTANT\n",
+    "from helper import murmur3\n",
+    "\n",
+    "size = 10\n",
+    "function_count = 5\n",
+    "tweak = 99\n",
+    "\n",
+    "items = (b'Hello World',  b'Goodbye!')\n",
+    "\n",
+    "# first the actual filter which is a bytearray of size size\n",
+    "f = bytearray(size)\n",
+    "\n",
+    "# for each item you want to add to the filter\n",
+    "for item in items:\n",
+    "    # iterate function_count number of times\n",
+    "    for i in range(function_count):\n",
+    "        # BIP0037 spec seed is i*BIP37_CONSTANT + tweak\n",
+    "        seed = i * BIP37_CONSTANT + tweak\n",
+    "        # get the murmur3 hash given that seed\n",
+    "        h = murmur3(item, seed=seed)\n",
+    "        # set the bit at the hash mod the total number of bits in the filter\n",
+    "        bit = h % (size * 8)\n",
+    "        # get the byte index and bit index\n",
+    "        filter_index, bit_index = divmod(bit, 8)\n",
+    "        # the filter's byte index needs the bit at the bit_index set\n",
+    "        f[filter_index] |= (1 << bit_index)\n",
+    "    print(bytes(f).hex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 1.2\n",
+    "\n",
+    "reload(bloomfilter)\n",
+    "run_test(bloomfilter.BloomFilterTest('test_add'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 2\n",
+    "\n",
+    "1. Make this test pass."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 2.1\n",
+    "\n",
+    "reload(bloomfilter)\n",
+    "run_test(bloomfilter.BloomFilterTest('test_filterload'))"
    ]
   },
   {
