--- a/session8.ipynb
+++ b/session8.ipynb
@@ -21,6 +21,108 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4dbf3ade1ed6595de5f9b4ab4a17a80d4bcc53227ac0b0eedbb237b595a73737\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Empty Merkle Block example\n",
+    "import math\n",
+    "\n",
+    "from helper import merkle_parent\n",
+    "\n",
+    "total = 1833\n",
+    "max_depth = math.ceil(math.log(total, 2))\n",
+    "hashes = [bytes.fromhex(h) for h in hex_hashes]\n",
+    "merkle_tree = []\n",
+    "for depth in range(max_depth+1):\n",
+    "    num_items = math.ceil(total / 2**(max_depth - depth))\n",
+    "    level_hashes = [None] * num_items\n",
+    "    merkle_tree.append(level_hashes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flag_bits = [1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0]\n",
+    "hex_hashes = [\n",
+    "    '96979db23ca3f0dbf3e4d748b3e845cfbed09c843967374969e1b703cd358458',\n",
+    "    'c9f0112d8a7fbb3b7364f14a5d0ba8e311a918dc735d9933df7912782bbf82fe',\n",
+    "    '6e6ce882f409e99d5763fd6afa02fbabb4b5f047ef0969ba6619a69fcc54d2c3',\n",
+    "    'c797c2248b270b28f35b530aefbaa0c5edb4f12343b44def58382496a93e8699',\n",
+    "    '46b4bdbe6ea1a845abff2bf36f6f39507c7eea292312bee36bc4bd96363871e9',\n",
+    "    '5a5b5f1268eb00dd47046a115a228d3c76cf0414bedf4e187b37918d5715bfb6',\n",
+    "    '8a0b9f69baaec595a7d9c00d1443f721ade27e99e4190511e1b24812d3f964d6',\n",
+    "    'd03d6f5cb9c308a2b795d44e1638a7aa5d0eb59e9c4eb5c313aca49ed3eb2619',\n",
+    "    '49e035addfe3c8cfc264eb34ebc9ad40609d9d53a03f3a7929f81dbf4f2e974f',\n",
+    "    '15ba5e2a376d9b269c1b99eec3d037c8228b25e33142aed6c00f2fedce8027db',\n",
+    "    '30fad74273b6ed865deae7eb30158d9a0fc1459e6d212a91c865ccaf59092d74',\n",
+    "    '1d09dd247812fcf2a1f95e31947abc3184f836aab904860ede28d4a5a072033c',\n",
+    "]\n",
+    "current_depth, current_index = 0, 0\n",
+    "while merkle_tree[0][0] is None:\n",
+    "    if current_depth == max_depth:\n",
+    "        current_bit = flag_bits.pop(0)\n",
+    "        merkle_tree[current_depth][current_index] = hashes.pop(0)\n",
+    "        next_depth, next_index = current_depth - 1, current_index // 2\n",
+    "    else:\n",
+    "        left_index = current_index * 2\n",
+    "        right_index = left_index + 1\n",
+    "        left_hash = merkle_tree[current_depth+1][left_index]\n",
+    "        if left_hash is None:\n",
+    "            if flag_bits.pop(0) == 0:\n",
+    "                merkle_tree[current_depth][current_index] = hashes.pop(0)\n",
+    "                next_depth, next_index = current_depth - 1, current_index // 2\n",
+    "            else:\n",
+    "                next_depth, next_index = current_depth + 1, left_index\n",
+    "        else:\n",
+    "            if right_index >= len(merkle_tree[current_depth+1]):\n",
+    "                merkle_tree[current_depth][current_index] = merkle_parent(left_hash, left_hash)\n",
+    "                next_depth, next_index = current_depth - 1, current_index // 2\n",
+    "            elif merkle_tree[current_depth+1][right_index]:\n",
+    "                right_hash = merkle_tree[current_depth+1][right_index]\n",
+    "                merkle_tree[current_depth][current_index] = merkle_parent(left_hash, right_hash)\n",
+    "                next_depth, next_index = current_depth - 1, current_index // 2\n",
+    "            else:\n",
+    "                next_depth, next_index = current_depth + 1, right_index\n",
+    "    current_depth, current_index = next_depth, next_index\n",
+    "print(merkle_tree[0][0].hex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "reload(merkleblock)\n",
+    "run_test(merkleblock.MerkleBlockTest('test_is_valid'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
